INTEGRATION: CWS qadev13 (1.1.34); FILE MERGED 2003/11/07 14:54:40 sg 1.1.34.1: #113007#CHG: fixed expensive constructor bug